--- a/core/new-gui/src/app/dashboard/user/component/search.scss
+++ b/core/new-gui/src/app/dashboard/user/component/search.scss
@@ -181,3 +181,9 @@ $dashboard-navigation-height: 71px;
   margin-left: 5px;
   margin-right: 5px;
 }
+
+.metadata-container {
+  span {
+    margin: 0 1rem 0 0; // add space to the right
+  }
+}
