--- a/core/new-gui/src/app/dashboard/user/component/user-workflow/user-workflow.component.html
+++ b/core/new-gui/src/app/dashboard/user/component/user-workflow/user-workflow.component.html
@@ -4,7 +4,7 @@
     <nz-button-group
       class="utility-button-group"
       ngbDropdown>
-      <!-- <texera-sort-button [(entries)]="dashboardWorkflowEntries"></texera-sort-button> -->
+      <texera-sort-button (sortMethodChange)="sortMethod = $event; search()"></texera-sort-button>
       <button
         (click)="onClickCreateNewWorkflowFromDashboard()"
         nz-button
