limit sharing to owner

--- a/core/new-gui/src/app/dashboard/user/component/user-project/user-project-list-item/user-project-list-item.component.html
+++ b/core/new-gui/src/app/dashboard/user/component/user-project/user-project-list-item/user-project-list-item.component.html
@@ -161,7 +161,7 @@
     <nz-list-item-action>
       <button
         (click)="onClickOpenShareAccess(entry.pid)"
-        [disabled]="false"
+        [disabled]="entry.ownerID !== uid"
         nz-button
         nz-tooltip="Share the project {{
 								entry.name
