--- a/core/new-gui/src/app/dashboard/user/component/user-file/user-file.component.html
+++ b/core/new-gui/src/app/dashboard/user/component/user-file/user-file.component.html
@@ -99,8 +99,7 @@
           [entry]="entry"
           (deleted)="deleteFile(entry.file.fid)"
           [editable]="true"
-          [uid]="uid"
-        ></texera-user-file-list-item>
+          [uid]="uid"></texera-user-file-list-item>
       </nz-list>
     </cdk-virtual-scroll-viewport>
   </nz-card>
