--- a/core/new-gui/src/app/workspace/component/input-autocomplete/input-autocomplete.component.html
+++ b/core/new-gui/src/app/workspace/component/input-autocomplete/input-autocomplete.component.html
@@ -8,8 +8,7 @@
     required
     [nzAutocomplete]="auto"
     [formControl]="formControl"
-    [formlyAttributes]="field"
-  />
+    [formlyAttributes]="field" />
   <div
     class="alert alert-danger"
     role="alert"
