--- a/core/new-gui/src/app/dashboard/user/component/user-workflow/user-workflow-list-item/user-workflow-list-item.component.html
+++ b/core/new-gui/src/app/dashboard/user/component/user-workflow/user-workflow-list-item/user-workflow-list-item.component.html
@@ -22,7 +22,7 @@
           *ngIf="!editingName; else customWorkflowTitle "
           [routerLink]="ROUTER_WORKFLOW_BASE_URL + '/' + workflow.wid"
           class="workflow-name"
-          >{{ workflow.name }}</a
+        >{{ workflow.name }}</a
         >
         <ng-template #customWorkflowTitle>
           <input
@@ -65,15 +65,15 @@
         <i
           class="workflow-is-owner-icon"
           *ngIf="entry.workflow.isOwner"
-          ngbTooltip="You are the owner"
+          nz-tooltip
+          nzTooltipTitle="You are the owner"
           nz-icon
           nzTheme="outline"
           nzType="user"></i>
         <i
           *ngIf="!entry.workflow.isOwner"
-          ngbTooltip="{{
-                          entry.workflow.accessLevel
-                      }} access shared by {{ entry.workflow.ownerName }}"
+          nz-tooltip
+          nzTooltipTitle="{{entry.workflow.accessLevel}} access shared by {{ entry.workflow.ownerName }}"
           nz-icon
           nzTheme="outline"
           nzType="team"></i>
