--- a/core/new-gui/src/app/workspace/component/navigation/navigation.component.html
+++ b/core/new-gui/src/app/workspace/component/navigation/navigation.component.html
@@ -320,7 +320,7 @@
             placeholder="Untitled Execution" />
         </label>
         <button
-          [disabled]=true
+          [disabled]="true"
           class="execution-duration"
           nz-button
           nzType="text">
