--- a/core/new-gui/src/app/dashboard/user/component/user-project/user-project.component.html
+++ b/core/new-gui/src/app/dashboard/user/component/user-project/user-project.component.html
@@ -37,7 +37,6 @@
     <button
       (click)="clickCreateButton()"
       nz-button
-      title="Create a new project"
       nz-tooltip="Create a new project"
       nzTooltipPlacement="bottom"
       type="button">
@@ -53,6 +52,15 @@
       [(ngModel)]="createProjectName"
       nz-input
       placeholder="Enter project name" />
+  </nz-card>
+
+  <nz-card>
+    <button
+      (click)="addPublicProjects()"
+      nz-button
+      nzType="primary">
+      Add Public Projects
+    </button>
   </nz-card>
 
   <nz-card>
