--- a/core/new-gui/src/app/dashboard/user/component/share-access/share-access.component.html
+++ b/core/new-gui/src/app/dashboard/user/component/share-access/share-access.component.html
@@ -75,9 +75,7 @@
           nz-col
           [nzSpan]="12">
           <nz-card nzTitle="Visibility">
-            <div style="height: 50px">
-              {{visibility}}
-            </div>
+            <div style="height: 50px">{{visibility}}</div>
             <button
               *ngIf="visibility==='Private'"
               style="width: 100%"
