--- a/core/new-gui/src/app/workspace/component/operator-panel/operator-panel.component.scss
+++ b/core/new-gui/src/app/workspace/component/operator-panel/operator-panel.component.scss
@@ -4,8 +4,7 @@
   flex-direction: column;
   .search-box {
     padding: 10px;
-    z-index: 0;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+    border-bottom: 1px solid #e0e0e0;
   }
   .texera-workspace-operator-panel-menu {
     flex-grow: 1;
