--- a/core/new-gui/src/app/workspace/component/operator-panel/operator-panel.component.scss
+++ b/core/new-gui/src/app/workspace/component/operator-panel/operator-panel.component.scss
@@ -1,5 +1,6 @@
 .texera-workspace-operator-panel-body {
   height: 100%;
+  width: 200px;
   display: flex;
   flex-direction: column;
   .search-box {
