--- a/core/new-gui/src/app/dashboard/user/component/user-avatar/user-avatar.component.html
+++ b/core/new-gui/src/app/dashboard/user/component/user-avatar/user-avatar.component.html
@@ -1,10 +1,7 @@
-<div class="d-inline-block">
-  <nz-avatar
+<nz-avatar
     [nzAlt]=""
     [nzSrc]="googleUserAvatarSrc || ''"
     [nzText]="abbreviate(userName || '')"
     [style.background-color]="userColor"
-    class="texera-user-avatar"
-    id="texera-user-avatar">
-  </nz-avatar>
-</div>
+    class="texera-user-avatar">
+</nz-avatar>
