--- a/core/new-gui/src/app/workspace/component/workspace.component.scss
+++ b/core/new-gui/src/app/workspace/component/workspace.component.scss
@@ -1,23 +1,46 @@
-/**
-  * this css forces the texera user-interface
-  * to cover the entire browser window
-  **/
-.grid-container {
-  min-width: 100%;
+#container{
   width: 100%;
-  min-height: 100%;
   height: 100%;
+  position:relative
 }
+
+texera-navigation{
+  position: absolute;
+  z-index: 2;
+  background: white;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+  width: 100%;
+}
+
+texera-operator-panel{
+  position:absolute;
+  z-index: 1;
+  background: white;
+  top:100px;
+  left:0;
+}
+
+
+#right-panel {
+  position:absolute;
+  z-index: 1;
+  background: white;
+  top:100px;
+  right:0;
+  height: 600px;
+  width:400px;
+
+}
+
+
+
+
 
 .texera-workspace {
   // transition: grid-template-rows 0.5s;
-  --header-height: 56px;
   --resultbar-height: 25px;
   --result-panel-height: 280px;
-
-  &.user-system-enabled {
-    --header-height: 96px;
-  }
+  --header-height: 96px;
 }
 
 /**
@@ -74,53 +97,6 @@
   position: relative;
 }
 
-/**
-  * this style specifies that the navigation component will
-  * use all three columns and the first row.
-  */
-.texera-navigation-grid-container {
-  grid-column: 1/4;
-  grid-row: 1/2;
-}
-
-/**
-  * this style specifies that the operator bar on the left will
-  * occupy the first column count from the left and use second and third rows.
-  * Overflow auto creates a scrollbar when the content exceeds the size
-  * of the grid
-  */
-
-.texera-operator-panel-grid-container {
-  grid-column: 1/2;
-  grid-row: 2/6;
-}
-
-/**
-  * this style specifies that the property editor for the operators
-  * on the right will occupy the 3rd (last) column and use second and third
-  * rows. Overflow auto creates a scrollbar when the content exceeds the size
-  * of the grid
-  */
-.texera-property-editor-grid-container {
-  grid-column: 3/4;
-  grid-row: 2/6;
-  overflow: auto;
-}
-
-.texera-right-side-bar-split-editor-minimap {
-  height: calc(100vh - var(--header-height) - 10px);
-  display: grid;
-  grid-template-rows: 1fr auto;
-}
-
-/**
-* this style specifies that the workflow editor in the middle
-* will occupy the 2nd (middle) columm and use the second row (middle)
-**/
-.texera-workflow-editor-grid-container {
-  grid-column: 2/3;
-  grid-row: 2/4;
-}
 
 /**
   * this style specifies that the result panel in the middle
