--- a/core/new-gui/src/app/workspace/component/workspace.component.html
+++ b/core/new-gui/src/app/workspace/component/workspace.component.html
@@ -3,12 +3,24 @@
   <texera-workflow-editor></texera-workflow-editor>
   <texera-operator-panel></texera-operator-panel>
 
+  <nz-collapse style="position: absolute; bottom:0">
+    <nz-collapse-panel
+      #p
+      [nzActive]="false"
+      [nzExpandedIcon]="expandedIcon"
+    >
+      <p>erhgerhgerh</p>
+      <ng-template #expandedIcon>
+        <span nz-icon nzType="caret-right" class="ant-collapse-arrow" [nzRotate]="p.nzActive ? 90 : -90"></span>
+      </ng-template>
+    </nz-collapse-panel>
+  </nz-collapse>
+
   <div id="right-panel">
     <texera-property-editor style="overflow: auto"> </texera-property-editor>
     <texera-mini-map></texera-mini-map>
   </div>
 
-  <texera-result-panel-toggle class="texera-result-panel-toggle-grid-container grid-container"></texera-result-panel-toggle>
   <texera-result-panel class="texera-result-panel-grid-container grid-container"> </texera-result-panel>
   <div class="texera-git-commit-id">Version 0.5.3 <br />Git hash: {{ gitCommitHash }}</div>
 </div>
