--- a/core/new-gui/src/app/workspace/component/workspace.component.scss
+++ b/core/new-gui/src/app/workspace/component/workspace.component.scss
@@ -1,7 +1,7 @@
 #container{
   width: 100%;
   height: 100%;
-  position:relative
+  position:relative;
 }
 
 texera-navigation{
@@ -109,10 +109,6 @@ texera-operator-panel{
   transition: height 1s;
 }
 
-.texera-result-panel-toggle-grid-container {
-  grid-column: 2/3;
-  grid-row: 4/5;
-}
 
 .texera-git-commit-id {
   position: absolute;
