--- a/core/new-gui/src/app/dashboard/user/component/user-project/user-project-list-item/user-project-list-item.component.html
+++ b/core/new-gui/src/app/dashboard/user/component/user-project/user-project-list-item/user-project-list-item.component.html
@@ -171,6 +171,7 @@
     </nz-list-item-action>
     <nz-list-item-action>
       <button
+        [disabled]="entry.accessLevel === 'READ'"
         (nzOnConfirm)="deleted.emit()"
         nz-button
         nz-popconfirm
