--- a/core/new-gui/src/app/dashboard/user/component/user-project/user-project.component.html
+++ b/core/new-gui/src/app/dashboard/user/component/user-project/user-project.component.html
@@ -56,10 +56,10 @@
 
   <nz-card>
     <button
-      (click)="addPublicProjects()"
+      (click)="openPublicProject()"
       nz-button
       nzType="primary">
-      Add Public Projects
+      Public Projects
     </button>
   </nz-card>
 
