--- a/core/new-gui/src/app/dashboard/user/component/user-project/public-project/public-project.component.html
+++ b/core/new-gui/src/app/dashboard/user/component/user-project/public-project/public-project.component.html
@@ -9,7 +9,7 @@
 <div class="modal-body">
   <nz-table
     #rowSelectionTable
-    [nzData]="userProjectEntries"
+    [nzData]="publicProjectEntries"
     [nzPageSize]="5"
   >
     <thead>
