--- a/core/new-gui/src/app/dashboard/user/component/user-project/public-project/public-project.component.html
+++ b/core/new-gui/src/app/dashboard/user/component/user-project/public-project/public-project.component.html
@@ -19,6 +19,7 @@
           (nzCheckedChange)="onAllChecked($event)"></th>
         <th>ID</th>
         <th>Name</th>
+        <th>Owner</th>
         <th>Creation Time</th>
       </tr>
     </thead>
@@ -30,6 +31,7 @@
           (nzCheckedChange)="onItemChecked(data.pid, $event)"></td>
         <td>{{ data.pid }}</td>
         <td>{{ data.name }}</td>
+        <td>{{ data.owner }}</td>
         <td>{{ data.creationTime | date: "yyyy-MM-dd HH:mm" }}</td>
       </tr>
     </tbody>
