--- a/core/new-gui/src/app/workspace/component/navigation/navigation.component.html
+++ b/core/new-gui/src/app/workspace/component/navigation/navigation.component.html
@@ -365,6 +365,7 @@
           (click)="onClickRunHandler()"
           nz-popover
           nzPopoverTitle="Enter Execution Name"
+          [nzPopoverTrigger]="userSystemEnabled?'hover':null"
           [nzPopoverContent]="execution_name"
           nzPopoverPlacement="bottom"
           [disabled]="runDisable || !workflowWebsocketService.isConnected || displayParticularWorkflowVersion"
