Adding maximize and minimize button for html/url visualizer

--- a/core/new-gui/src/app/workspace/component/result-panel/visualization-frame/visualization-frame.component.html
+++ b/core/new-gui/src/app/workspace/component/result-panel/visualization-frame/visualization-frame.component.html
@@ -3,3 +3,27 @@
   (click)="onClickVisualize()">
   Visualize
 </button>
+
+<ng-template #modalTitleMax>
+  <div style="display: flex; align-items: center; justify-content: space-between">
+    <span>Visualization</span>
+    <button
+      class="ant-btn ant-btn-primary"
+      style="margin-right: 20px"
+      (click)="maximize()">
+      Maximize
+    </button>
+  </div>
+</ng-template>
+
+<ng-template #modalTitleMin>
+  <div style="display: flex; align-items: center; justify-content: space-between">
+    <span>Visualization</span>
+    <button
+      class="ant-btn ant-btn-primary"
+      style="margin-right: 20px"
+      (click)="minimize()">
+      Minimize
+    </button>
+  </div>
+</ng-template>
