--- a/core/new-gui/src/app/workspace/component/visualization-panel-content/visualization-frame-content.component.scss
+++ b/core/new-gui/src/app/workspace/component/visualization-panel-content/visualization-frame-content.component.scss
@@ -1,6 +1,6 @@
 #texera-result-map-container {
-  width: 1000px;
-  height: 800px;
+  width: 100%;
+  height: 100%;
 }
 
 #texera-result-html-content-container {
