--- a/core/new-gui/src/app/workspace/component/workflow-editor/context-menu/context-menu/context-menu.component.html
+++ b/core/new-gui/src/app/workspace/component/workflow-editor/context-menu/context-menu/context-menu.component.html
@@ -56,23 +56,23 @@
   </li>
   <li
     nz-menu-item
-    *ngIf="operatorMenu.operatorCacheEnabled && (operatorMenu.isCacheOperator && operatorMenu.isCacheOperatorClickable)"
+    *ngIf="(operatorMenu.isCacheOperator && operatorMenu.isCacheOperatorClickable)"
     (click)="operatorMenu.cacheHighlightedOperators()">
     <span
       nz-icon
-      nzType="database"
+      nzType="eye"
       nzTheme="outline"></span
-    >cache output
+    >view result
   </li>
   <li
     nz-menu-item
-    *ngIf="operatorMenu.operatorCacheEnabled && (! operatorMenu.isCacheOperator && operatorMenu.isCacheOperatorClickable)"
+    *ngIf="(! operatorMenu.isCacheOperator && operatorMenu.isCacheOperatorClickable)"
     (click)="operatorMenu.cacheHighlightedOperators()">
     <span
       nz-icon
-      nzType="database"
+      nzType="eye-invisible"
       nzTheme="twotone"></span
-    >remove cache
+    >remove view result
   </li>
   <li
     nz-menu-item
