--- a/core/new-gui/src/app/workspace/component/navigation/navigation.component.scss
+++ b/core/new-gui/src/app/workspace/component/navigation/navigation.component.scss
@@ -2,7 +2,7 @@
 
 .texera-navigation-body {
   height: 100%;
-  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
   position: relative;
   z-index: 1;
 }
@@ -151,7 +151,7 @@
       }
 
       &:focus {
-        box-shadow: 0 0 0px 2px #007bff;
+        box-shadow: 0 0 0 2px #007bff;
       }
     }
 
@@ -168,20 +168,11 @@
     text-align: right;
     margin-right: 20px;
 
-    .texera-navigation-run-button {
-      width: 16ch;
+    .run-button {
+      width: 200px;
       text-align: left;
-      z-index: 1;
-
-      .texera-navigation-run-button-icon {
-        width: max-content;
-        padding-right: 8px;
-      }
-    }
-
-    .texera-navigation-stop-button {
-      width: 40px;
-      z-index: 0;
+      padding-left: 10px;
+      padding-right: 10px;
     }
 
     .animate-to-reveal-stop-button {
@@ -190,15 +181,7 @@
     }
   }
 
-  .reveal-stop-button {
-    .animate-to-reveal-stop-button {
-    }
-  }
-
   .execution-name {
     margin-right: 0.5rem;
-  }
-  .execution-duration {
-    color: #007bff;
   }
 }
