--- a/core/new-gui/src/app/workspace/component/navigation/navigation.component.html
+++ b/core/new-gui/src/app/workspace/component/navigation/navigation.component.html
@@ -386,23 +386,17 @@
         </ng-template>
         <div [ngStyle]="{ 'margin-left': '5px' }">
           <nz-badge
-            *ngIf="workflowWebsocketService.isConnected"
-            nz-popover
-            [nzPopoverTrigger]="userSystemEnabled?'hover':null"
-            [nzPopoverContent]="exe1"
-            nzPopoverPlacement="bottom"
-            nzStatus="success"></nz-badge>
-          <ng-template #exe1>
-            <div [ngStyle]="{ 'font-size': '20px', 'margin-bottom': '10px' }">Connected</div>
-            <div [ngStyle]="{ 'border': '1px solid black', 'padding': '10px' }">
+            nz-tooltip=""
+            nzTooltipPlacement="bottom"
+            [nzTooltipTitle]="clusterInfo"
+            [nzColor]="workflowWebsocketService.isConnected?'green':'red'">
+          </nz-badge>
+          <ng-template #clusterInfo>
+            <b>{{workflowWebsocketService.isConnected?"Connected":"Disconnected"}} to Web Server</b>
+            <div *ngIf="workflowWebsocketService.isConnected">
               Number of Machines: {{workflowWebsocketService.numWorkers}}
             </div>
           </ng-template>
-          <nz-badge
-            *ngIf="!workflowWebsocketService.isConnected"
-            nz-tooltip="disconnected"
-            nzStatus="error"
-            nzTooltipPlacement="bottom"></nz-badge>
         </div>
       </nz-button-group>
     </div>
