make it vertical

--- a/core/new-gui/src/app/workspace/component/property-editor/operator-property-edit-frame/operator-property-edit-frame.component.html
+++ b/core/new-gui/src/app/workspace/component/property-editor/operator-property-edit-frame/operator-property-edit-frame.component.html
@@ -69,6 +69,8 @@
   (keyup.enter)="disconnectQuillFromText()"></div>
 
 <form
+  nz-form
+  [nzLayout]="'vertical'"
   *ngIf="formlyFields && formlyFormGroup"
   [formGroup]="formlyFormGroup"
   class="texera-workspace-property-editor-form">
