execution-dashboard-frontend, main body

--- a/core/new-gui/src/app/dashboard/user/component/dashboard.component.html
+++ b/core/new-gui/src/app/dashboard/user/component/dashboard.component.html
@@ -83,7 +83,7 @@
         <ul>
           <li
             nz-menu-item
-            nz-tooltip="Look up the user files"
+            nz-tooltip="Look up the users"
             nzMatchRouter="true"
             nzTooltipPlacement="right"
             routerLink="/dashboard/admin-user">
@@ -91,6 +91,17 @@
               nz-icon
               nzType="user"></span>
             <span>Users</span>
+          </li>
+          <li
+            nz-menu-item
+            nz-tooltip="View statistics"
+            nzMatchRouter="true"
+            nzTooltipPlacement="right"
+            routerLink="/dashboard/admin-dashboard">
+            <span
+              nz-icon
+              nzType="setting"></span>
+            <span>Executions</span>
           </li>
         </ul>
       </li>
