--- a/core/new-gui/src/app/dashboard/user/component/user-workflow/ngbd-modal-workflow-executions/ngbd-modal-workflow-executions.component.html
+++ b/core/new-gui/src/app/dashboard/user/component/user-workflow/ngbd-modal-workflow-executions/ngbd-modal-workflow-executions.component.html
@@ -9,7 +9,7 @@
       type="button">
       <span aria-hidden="true"> × </span>
     </button>
-    <h4 class="modal-title">Execution results of Workflow: {{workflowName}}</h4>
+    <h4 class="modal-title">Execution results of Workflow: {{workflowName}} ({{workflow.wid}})</h4>
     <nz-input-group
       [nzPrefix]="prefixPopoverButton"
       [nzSuffix]="suffixIconSearch"
@@ -33,7 +33,7 @@
         <ul>
           <li>Search by Execution Name: <strong>executionName</strong></li>
           <li>Search by Execution User: <strong>user:John</strong></li>
-          <li>Search by Execution Status: <strong>status:initializing/running/paused/completed/aborted</strong></li>
+          <li>Search by Execution Status: <strong>status:initializing/running/paused/completed/FAILED/KILLED</strong></li>
         </ul>
         <strong>
           For any execution name and user name, if the name contains space, using double quotes to enclose the name is
@@ -160,7 +160,7 @@
                 <label
                   *ngIf="workflowExecutionsIsEditingName.indexOf(i) === -1; else customeWorkflow "
                   class="execution-description workflow-name"
-                  >{{ abbreviate(row.name, true) }}</label
+                  >{{ abbreviate(row.name, true) }} ({{row.eId}})</label
                 >
                 <ng-template #customeWorkflow>
                   <input
