--- a/core/new-gui/src/app/dashboard/user/component/user-workflow/ngbd-modal-workflow-executions/ngbd-modal-workflow-executions.component.html
+++ b/core/new-gui/src/app/dashboard/user/component/user-workflow/ngbd-modal-workflow-executions/ngbd-modal-workflow-executions.component.html
@@ -33,7 +33,9 @@
         <ul>
           <li>Search by Execution Name: <strong>executionName</strong></li>
           <li>Search by Execution User: <strong>user:John</strong></li>
-          <li>Search by Execution Status: <strong>status:initializing/running/paused/completed/FAILED/KILLED</strong></li>
+          <li>
+            Search by Execution Status: <strong>status:initializing/running/paused/completed/FAILED/KILLED</strong>
+          </li>
         </ul>
         <strong>
           For any execution name and user name, if the name contains space, using double quotes to enclose the name is
