--- a/core/new-gui/src/app/workspace/component/navigation/navigation.component.html
+++ b/core/new-gui/src/app/workspace/component/navigation/navigation.component.html
@@ -12,8 +12,7 @@
         <img
           [ngClass]="{ 'user-system-enabled': userSystemEnabled }"
           alt="Texera"
-          src="assets/logos/full_logo_small.png?v=1"
-          title="dashboard" />
+          src="assets/logos/full_logo_small.png?v=1" />
       </ng-template>
     </div>
 
