Fix the formatting of the html file

--- a/core/new-gui/src/app/workspace/component/navigation/navigation.component.html
+++ b/core/new-gui/src/app/workspace/component/navigation/navigation.component.html
@@ -1,7 +1,9 @@
 <div class="texera-navigation-body">
   <div class="texera-navigation-padded">
     <div class="texera-navigation-title">
-      <a *ngIf="userSystemEnabled; else noLink" [routerLink]="'/dashboard/workflow'">
+      <a
+        *ngIf="userSystemEnabled; else noLink"
+        [routerLink]="'/dashboard/workflow'">
         <img
           [ngClass]="{ 'user-system-enabled': userSystemEnabled }"
           alt="Texera"
