--- a/core/new-gui/src/app/dashboard/user/component/user-workflow/ngbd-modal-workflow-executions/ngbd-modal-workflow-executions.component.html
+++ b/core/new-gui/src/app/dashboard/user/component/user-workflow/ngbd-modal-workflow-executions/ngbd-modal-workflow-executions.component.html
@@ -9,7 +9,10 @@
       type="button">
       <span aria-hidden="true"> × </span>
     </button>
-    <h4 class="modal-title">Execution results of Workflow: {{workflowName}} ({{workflow.wid}})</h4>
+    <h4 class="modal-title">
+      Execution results of Workflow: {{workflowName}} 
+      <span *ngIf="workflow">{{workflow.wid}}</span>
+    </h4>
     <nz-input-group
       [nzPrefix]="prefixPopoverButton"
       [nzSuffix]="suffixIconSearch"
