Change a condition whether to disable renaming the execution

--- a/core/new-gui/src/app/workspace/component/navigation/navigation.component.html
+++ b/core/new-gui/src/app/workspace/component/navigation/navigation.component.html
@@ -366,7 +366,7 @@
           <input
             [(ngModel)]="currentExecutionName"
             placeholder="Untitled Execution"
-            [disabled]="!isExecutionInTerminalState()" />
+            [disabled]="!isWorkflowModifiable" />
         </ng-template>
         <div [ngStyle]="{ 'margin-left': '5px' }">
           <nz-badge
